refactor: managers, clean up, more methods